--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cinnamini",
+  "name": "boilerplate-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cypress": "cypress open",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
